adding css link to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Book and Coffee Shop Connector</title>
     <meta name="description" content="Connecting people with eBooks and coffe shops.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
