bug fix: search input was loading before the map, causing layout to shift as page loads

--- a/coffeShops.html
+++ b/coffeShops.html
@@ -26,22 +26,23 @@
         <div id="reviews">
         </div>
 
-        <form id="coffee-shop-search">
-
-            <input type="text" class="controls" id="coffe-shop-input" placeholder="e.g. coffee in seattle" />
-
-        </form>
+        <div class="hide">
+            <form id="coffee-shop-search">
+                <input type="text" class="controls" id="coffe-shop-input" placeholder="e.g. coffee in seattle" />
+            </form>
+        </div>
 
     </main>
 
     <footer>
     </footer>
 
+    <script src="coffeeShops2.js"></script>
+
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxDHNB-00Dm6piLxF8CBmFyPTXBrkYRis&libraries=places&callback=initMap"
         async defer></script>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="coffeeShops2.js"></script>
 
 </body>
 
