--- a/index.html
+++ b/index.html
@@ -4,40 +4,38 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Book and Coffee Shop Connector</title>
     <meta name="description" content="Connecting people with eBooks and coffe shops.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Book and Coffee Shop Connector</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
     <header>
-        <h1>Book and Coffee Shop Connector</h1>
-        <p>Bringing together two things you love- books and coffee.</p>
+        <h1 class="title">Book and Coffee Shop Connector</h1>
+        <p class="tag-line">Bringing together two things you love- books and coffee.</p>
     </header>
 
     <main>
 
-        <div>
+        <ol class="app-state">
+            <li class="step-1">find an eBook to download.</li>
+            <li class="step-2">find a coffee shop to read at.</li>
+            <li class="step-3">purchase and get directions.</li>
+        </ol>
 
-            <ol>
-                <li>find an eBook.</li>
-                <li>find a coffee shop.</li>
-            </ol>
-
-            <form>
-                <input type="button" id="go-to-books" onclick="location.href='bookResults.html';" value="let's get started!" />
-            </form>
-
-        </div>
-
+        <form>
+            <input type="button" id="go-to-books" onclick="location.href='bookResults.html';" value="let's get started!" />
+        </form>
 
     </main>
 
     <footer>
     </footer>
 
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="state.js"></script>
     <script src="index.js"></script>
 </body>
 
