app is now fully functional; layout is functional; still needs styling

--- a/bookResults.html
+++ b/bookResults.html
@@ -29,11 +29,10 @@
             <button type="submit">submit</button>
         </form>
 
-        <div class="coffee-shop-intro tag-line">
+        <div class="tag-line">
             <span>...when you're ready, we'll find the best cup of coffee near you.</span>
-            <input type="button" id="go-to-coffee-shops" onclick="location.href='coffeShops.html';" value="next step" />
+            <button type="button" id="go-to-coffee-shops" onclick="location.href='coffeShops.html';">next step</button>
         </div>
-
     </main>
 
     <section class="results-section">
