--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <label for="book-input">What would you like to read today?</label>
                 <br />
                 <input type="text" id="book-input" placeholder="e.g. author, topic, genre" />
-                <button type="button" id="booksBtn" onclick="" value="go-to-coffee-shops">submit</button>
+                <button type="submit" id="booksBtn" value="search-for-books">submit</button>
             </form>
 
             <div class="book-results-container">
@@ -65,7 +65,7 @@
                 </div>
 
                 <div class="side-panel-wrap">
-                    <button type="button" id="coffeeShopBtn" onclick="" value="go-to-final" disabled>select this coffee shop</button>
+                    <button type="button" id="coffeeShopBtn" value="go-to-final" disabled>select this coffee shop</button>
                     <div id="coffee-shop-reviews">
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                         <input type="text" id="start" /><br /><br />
                         <label for="end" id="endLabel">end</label>
                         <input type="text" id="end" disabled/><br />
-                        <button type="button" id="finalBtn" onclick="" value="get-directions">submit</button>
+                        <button type="button" id="finalBtn" value="get-directions">submit</button>
                     </form>
                 </div>
             </div>
