--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
         </div>
 
         <!-- coffee shop search page -->
-        <div class="find-coffee-shop-page default-height hide-map">
+        <div class="find-coffee-shop-page hide-map">
+
+
             <div class="hide">
                 <!-- wrapped in a hidden div to prevent it from appearing on the page before the map renders -->
                 <form id="coffee-shop-search">
@@ -76,7 +78,8 @@
         </div>
 
         <!-- final page -->
-        <div class="final-page default-height hide-map">
+        <div class="final-page hide-map">
+
 
             <div class="selected-results">
                 <div class="selected-book">
