UI updates (background images added with fade effect); re-org folder structure; starting to implement bootsrap

--- a/index.html
+++ b/index.html
@@ -17,17 +17,14 @@
     <header>
         <h1 class="title">Books 'n Brew</h1>
         <p class="subtitle">Bringing together two things you love- books and coffee.</p>
-
-        <!-- user instructions -->
-
     </header>
 
     <main>
 
         <!-- landing page -->
-
-        <div class="landing-page">
+        <div class="container-fluid landing-page">
             <ol class="app-state">
+                <!-- user instructions -->
                 <li class="step-1">find an eBook to download.</li>
                 <li class="step-2">find a coffee shop to read at.</li>
                 <li class="step-3">purchase and get directions.</li>
@@ -39,7 +36,7 @@
         </div>
 
         <!-- book search page -->
-        <div class="find-book-page hide">
+        <div class="container-fluid find-book-page hide">
             <form id="book-search-form">
                 <label id="book-input-label" for="book-input">What would you like to read today?</label>
                 <br />
@@ -56,8 +53,7 @@
         </div>
 
         <!-- coffee shop search page -->
-        <div class="find-coffee-shop-page hide-map">
-
+        <div class="container-fluid find-coffee-shop-page hide-map">
 
             <div class="hide">
                 <!-- wrapped in a hidden div to prevent it from appearing on the page before the map renders -->
@@ -82,8 +78,7 @@
         </div>
 
         <!-- final page -->
-        <div class="final-page hide-map">
-
+        <div class="container-fluid final-page hide-map">
 
             <div class="selected-results">
                 <div class="selected-book">
